--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zArubaru/wp-redirection",
+    "name": "devgeniem/wp-redirection",
     "type": "wordpress-plugin",
     "description": "Redirection plugin",
     "authors": [
